feat(order-flow)!: 重构采购销售物流及财务单据流
统一采购、销售与物流来源单据校验和状态流转，完善实际重量、并发占用及资金收付逻辑。

移除采购退款单与旧供应商退款到账模块，完成采购改为按实际入库确认结算和收票容量。

归档测试资产并停用测试流水线。

BREAKING CHANGE: 移除采购退款单和供应商退款到账 API，采购完成、财务流及收票容量改用实际入库与通用收付款口径。